# salesforce-agent

./: README.md  env.example  pyproject.toml
function_tool/: agent.py  salesforce_tool.py
function_tool/evals/: test_eval.py
function_tool/evals/data/: ask_for_account.evalset.test.json
salesforce_mcp/: agent.py
