[project]
name = "salesforce-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.18.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "google-adk[eval]>=1.18.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
